--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,8 @@ services:
       - "4000:4000"
     depends_on:
       - db
-#    command: /bin/bash -c "cd /app && mix ecto.create && mix ecto.migrate && exec mix phoenix.server" 
-#    command: /bin/bash -c "cd /app && mix phoenix.server"
-    command: sleep infinity
+#    command: /bin/bash -c "cd /app && mix ecto.create && mix ecto.migrate && mix phoenix.server" 
+    command: /bin/bash -c "cd /app && mix phoenix.server"
   db:
     image: postgres:9.5
     environment:
@@ -23,6 +22,20 @@ services:
     restart: always
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+  pgadmin:
+    image: dpage/pgadmin4:4.23
+    environment:
+        PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+        PGADMIN_DEFAULT_PASSWORD: password
+        PGADMIN_LISTEN_PORT: 80
+#        PGADMIN_CONFIG_SERVER_MODE: "False"
+#        PGADMIN_CONFIG_DESKTOP_USER: "pgadmin4@pgadmin.org"
+    ports:
+        - 15432:80
+    volumes:
+        - pgadmin:/var/lib/pgadmin
+    depends_on:
+        - db
 volumes:
   myapp:
     driver: local
@@ -30,3 +43,10 @@ volumes:
       type: none
       device: ./src
       o: bind
+  pgadmin:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./pgadmin
+      o: bind
+
