--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     depends_on:
       - db
 #    command: /bin/bash -c "cd /app && mix ecto.create && mix ecto.migrate && mix phoenix.server" 
-#    command: /bin/bash -c "cd /app && mix phoenix.server"
+    command: sleep infinity
   db:
     image: postgres:9.5
     environment:
